--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Derek Liang's Blog
 subtitle:
 description:
 author: Derek Liang
@@ -85,3 +85,6 @@ deploy:
   extend_dirs: /
   ignore_hidden: false # default is true
   ignore_pattern: regexp  # whatever file that matches the regexp will be ignored when deploying
+
+admin:
+  deployCommand: _deploy.bat
